fix(globals.css): trick around headlessui Modal issue with sticky elements. Where overflow hidden breaks the UI

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -40,6 +40,14 @@ strong {
   background-size: 5rem;
 }
 
+html[style*="overflow"] {
+  overflow: unset !important;
+}
+
+html[style*="overflow"] body {
+  overflow: hidden;
+}
+
 h1,
 h2 {
   letter-spacing: -0.05em;
